--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
     <!-- === JS Files === -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
     referrerpolicy="no-referrer"></script>
-    <script src="Js/scrip.js"></script>
-    <script src="Js/style-switcher.js"></script>
+    <script src="scrip.js"></script>
+    <script src="style-switcher.js"></script>
 </body>
 </html>
