--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="Css/color-2.css" class="alternate-style" title="color-2"disabled>
     <link rel="stylesheet" href="Css/color-3.css" class="alternate-style" title="color-3"disabled>
     <link rel="stylesheet" href="Css/color-4.css" class="alternate-style" title="color-4"disabled>
-    <link rel="stylesheet" href="CSS/color-5.css" class="alternate-style" title="color-5"disabled>
-    <link rel="stylesheet" href="CSS/style-switcher.css">
+    <link rel="stylesheet" href="Css/color-5.css" class="alternate-style" title="color-5"disabled>
+    <link rel="stylesheet" href="Css/style-switcher.css">
 </head>
 <body>
     <!-- === Main container start === -->
