Fix css assets 🥰

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- ===== css files ==== -->
-    <link rel="stylesheet"type="text/css" href="Css/style.css">
-    <link rel="stylesheet" href="Css/color-1.css">
+    <link rel="stylesheet"type="text/css" href="./css/style.css">
+    <link rel="stylesheet" href="./css/color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- ==== Style Switcher ==== -->
-    <link rel="stylesheet" href="Css/color-1.css" class="alternate-style" title="color-1"disabled>
-    <link rel="stylesheet" href="Css/color-2.css" class="alternate-style" title="color-2"disabled>
-    <link rel="stylesheet" href="Css/color-3.css" class="alternate-style" title="color-3"disabled>
-    <link rel="stylesheet" href="Css/color-4.css" class="alternate-style" title="color-4"disabled>
-    <link rel="stylesheet" href="Css/color-5.css" class="alternate-style" title="color-5"disabled>
-    <link rel="stylesheet" href="Css/style-switcher.css">
+    <link rel="stylesheet" href="./css/color-1.css" class="alternate-style" title="color-1"disabled>
+    <link rel="stylesheet" href="./css/color-2.css" class="alternate-style" title="color-2"disabled>
+    <link rel="stylesheet" href="./css/color-3.css" class="alternate-style" title="color-3"disabled>
+    <link rel="stylesheet" href="./css/color-4.css" class="alternate-style" title="color-4"disabled>
+    <link rel="stylesheet" href="./css/color-5.css" class="alternate-style" title="color-5"disabled>
+    <link rel="stylesheet" href="./css/style-switcher.css">
 </head>
 <body>
     <!-- === Main container start === -->
