--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <link rel="stylesheet" href="./css/style-switcher.css">
 </head>
 <body>
-    <!-- === Main container start === -->
-    <div class="main-container">
+       <div class="main-container">
         <!--  === ATR End === -->
         
         <div class="ATR">
@@ -47,9 +46,9 @@
                     <div class="row">
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Ahmed Tarek Radwan </span> </h3>
-                            <h3 class="my-profession">I’m a <span class="typing">Web Developer</span></h3>
+                            <h3 class="my-profession">I’ m a <span class="typing">Web Developer</span></h3>
                             <p>I’m a web developer.I love programming.</p>
-                            <a href="#contact" class="btn hire-me">Hire Me</a>
+                            <a href="#" class="btn">Download</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="Images/pdd.jpg" alt="">
@@ -103,8 +102,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="buttons padd-15">
-                                                <a href="#" class="btn">Download cv</a>
-                                                <a href="#contact" class="btn hire-me">Hire Me</a>
+                                                <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                                             </div>
                                         </div>
                                     </div>
@@ -166,7 +164,7 @@
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
                                                 <h3 class="timeline-data">
-                                                    <i class="fa fa-calendar"></i> 2020-2023
+                                                    <i class="fa fa-calendar"></i> 2026-2028
                                                 </h3>
                                                 <h4 class="timeline-title">Master in computer science</h4>
                                                 <p class="timeline-text">laksdlkansldk
@@ -179,7 +177,7 @@
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
                                                 <h3 class="timeline-data">
-                                                    <i class="fa fa-calendar"></i> 2020-2023
+                                                    <i class="fa fa-calendar"></i> 2026-2028
                                                 </h3>
                                                 <h4 class="timeline-title">Master in computer science</h4>
                                                 <p class="timeline-text">laksdlkansldk
@@ -192,7 +190,7 @@
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
                                                 <h3 class="timeline-data">
-                                                    <i class="fa fa-calendar"></i> 2020-2023
+                                                    <i class="fa fa-calendar"></i> 2026-2028
                                                 </h3>
                                                 <h4 class="timeline-title">Master in computer science</h4>
                                                 <p class="timeline-text">laksdlkansldk
@@ -205,7 +203,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="experience padd-15">
+                            <div class="education padd-15">
                                 <h3 class="title">Experience</h3>
                                 <div class="row">
                                     <div class="timeline-box padd-15">
@@ -214,7 +212,7 @@
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
                                                 <h3 class="timeline-data">
-                                                    <i class="fa fa-calendar"></i> 2020-2023
+                                                    <i class="fa fa-calendar"></i> 2026-2028
                                                 </h3>
                                                 <h4 class="timeline-title">Master in computer science</h4>
                                                 <p class="timeline-text">laksdlkansldk
@@ -228,7 +226,7 @@
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
                                                 <h3 class="timeline-data">
-                                                    <i class="fa fa-calendar"></i> 2020-2023
+                                                    <i class="fa fa-calendar"></i> 2026-2028
                                                 </h3>
                                                 <h4 class="timeline-title">Master in computer science</h4>
                                                 <p class="timeline-text">laksdlkansldk
@@ -242,7 +240,7 @@
                                             <div class="timeline-item">
                                                 <div class="circle-dot"></div>
                                                 <h3 class="timeline-data">
-                                                    <i class="fa fa-calendar"></i> 2020-2023
+                                                    <i class="fa fa-calendar"></i> 2026-2028
                                                 </h3>
                                                 <h4 class="timeline-title">Master in computer science</h4>
                                                 <p class="timeline-text">laksdlkansldk
