--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- ===== css files ==== -->
-    <link rel="stylesheet"type="text/css" href="./css/style.css">
+    <link rel="stylesheet"type="text/css" href="./Css/style.css">
     <link rel="stylesheet" href="./Css/color-1.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- ==== Style Switcher ==== -->
