English and font fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ahmed's Portfolio</title>
     <!-- ===== css files ==== -->
     <link rel="stylesheet"type="text/css" href="./css/style.css">
     <link rel="stylesheet" href="./css/color-1.css">
@@ -45,10 +45,10 @@
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
-                            <h3 class="hello">Hello, my name is <span class="name">Ahmed Tarek Radwan </span> </h3>
-                            <h3 class="my-profession">I’ m a <span class="typing">Web Developer</span></h3>
-                            <p>I’m a web developer.I love programming.</p>
-                            <a href="#" class="btn">Download</a>
+                            <h3 class="hello">Hello, I am&nbsp;<span class="name">Ahmed Tarek Radwan </span> </h3>
+                            <h3 class="my-profession">A&nbsp;<span class="typing">Web Developer</span></h3>
+                            I’m a <strong>Web Developer</strong> passionate in programming.</p>
+                            <a href="#" class="btn">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="Images/pdd.jpg" alt="">
@@ -69,12 +69,9 @@
                         <div class="about-content padd-15">
                             <div class="row">
                                 <div class="about-text padd-15">
-                                    <h3>I’m Radwan and <span>Web Developer</span></h3>
-                                    <p>I’m Ahmed Tarek Ahmed Mahmoud Radwan .
-                                        Iam web developer . iam grade in three . I love programming .
-                                        iam from egypt .
-                                        iam in EELU unvirsite and  
-                                        sohag unvirsite. 
+                                    <h3>I’m Radwan, a <span>Web Developer</span></h3>
+                                    <p>I am Ahmed Tarek Ahmed Mahmoud Rawan from Egypt. I am a web developer in grade three.
+                                       I love to program and I am in the EELU and Sohag university.
                                     </p>
                                 </div>
                             </div>
@@ -82,22 +79,22 @@
                                     <div class="personal-info padd-15">
                                         <div class="row">
                                             <div class="info-item padd-15">
-                                            <p> birthday : <span>23 July 2001</span></p>
+                                            <p>Birthday: <span>July 23rd, 2001</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p> Age : <span>20</span></p>
+                                                <p>Age: <span>20</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p> Website : <span>www.domain.com</span></p>
+                                                <p>Website: <span>www.domain.com</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p> Email : <span>tara02664@gmail.com</span></p>
+                                                <p>Email: <span>tara02664@gmail.com</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p> Phone : <span>+9023820830488</span></p>
+                                                <p>Phone: <span>+9(023) 820-83048</span></p>
                                             </div>
                                             <div class="info-item padd-15">
-                                                <p> Freelance : <span>Available</span></p>
+                                                <p>Freelance Status: <span>Available</span></p>
                                             </div>
                                         </div>
                                         <div class="row">
@@ -167,10 +164,7 @@
                                                     <i class="fa fa-calendar"></i> 2026-2028
                                                 </h3>
                                                 <h4 class="timeline-title">Master in computer science</h4>
-                                                <p class="timeline-text">laksdlkansldk
-                                                    alksdnlaksndlkansldknlaks
-                                                    mkalnsdknalksndlkansld
-                                                    knlaksdnlkasndlka.
+                                                <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. In, est.
                                                 </p>
                                             </div>
                                             <!-- ===== timeline item ===== -->
@@ -180,10 +174,7 @@
                                                     <i class="fa fa-calendar"></i> 2026-2028
                                                 </h3>
                                                 <h4 class="timeline-title">Master in computer science</h4>
-                                                <p class="timeline-text">laksdlkansldk
-                                                    alksdnlaksndlkansldknlaks
-                                                    mkalnsdknalksndlkansld
-                                                    knlaksdnlkasndlka.
+                                                <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. In, est.
                                                 </p>
                                             </div>
                                             <!-- ===== timeline item ===== -->
@@ -193,10 +184,7 @@
                                                     <i class="fa fa-calendar"></i> 2026-2028
                                                 </h3>
                                                 <h4 class="timeline-title">Master in computer science</h4>
-                                                <p class="timeline-text">laksdlkansldk
-                                                    alksdnlaksndlkansldknlakslkans
-                                                    mkalnsdknalksndlkansld
-                                                    knlaksdnlkasndlka.
+                                                <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. In, est.
                                                 </p>
                                             </div>
                                         </div>
@@ -215,10 +203,7 @@
                                                     <i class="fa fa-calendar"></i> 2026-2028
                                                 </h3>
                                                 <h4 class="timeline-title">Master in computer science</h4>
-                                                <p class="timeline-text">laksdlkansldk
-                                                    alksdnlaksndlkansldknlakslkans
-                                                    mkalnsdknalksndlkansld
-                                                    knlaksdnlkasndlka.
+                                                <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione, architecto.
                                                 </p>
                                                 </p>
                                             </div>
@@ -229,10 +214,7 @@
                                                     <i class="fa fa-calendar"></i> 2026-2028
                                                 </h3>
                                                 <h4 class="timeline-title">Master in computer science</h4>
-                                                <p class="timeline-text">laksdlkansldk
-                                                    alksdnlaksndlkansldknlakslkans
-                                                    mkalnsdknalksndlkansld
-                                                    knlaksdnlkasndlka.
+                                                <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At, est!
                                                 </p>
                                                 </p>
                                             </div>
@@ -243,10 +225,7 @@
                                                     <i class="fa fa-calendar"></i> 2026-2028
                                                 </h3>
                                                 <h4 class="timeline-title">Master in computer science</h4>
-                                                <p class="timeline-text">laksdlkansldk
-                                                    alksdnlaksndlkansldknlakslkans
-                                                    mkalnsdknalksndlkansld
-                                                    knlaksdnlkasndlka.
+                                                <p class="timeline-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci, expedita!
                                                 </p>
                                             </div>
                                         </div>
@@ -274,7 +253,7 @@
                                     <i class="fa fa-mobile-alt"></i>
                                 </div>
                                 <h4>Web Developer</h4>
-                                <p> asdasd asdasd asdasd asdasd asdasd asdasd 
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing.
                                 </p>
                             </div>
                         </div>
@@ -286,7 +265,7 @@
                                         <i class="fa fa-laptop-code"></i>
                                     </div>
                                     <h4>Web Developer</h4>
-                                    <p> asdasd asdasd asdasd asdasd asdasd asdasd 
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing. 
                                     </p>
                                 </div>
                             </div>
@@ -298,7 +277,7 @@
                                     <i class="fa fa-palette"></i>
                                 </div>
                                 <h4>Web Developer</h4>
-                                <p> asdasd asdasd asdasd asdasd asdasd 
+                                <p>Lorem ipsum dolor sit, amet consectetur adipisicing.
                                 </p>
                             </div>
                         </div>
@@ -310,7 +289,7 @@
                                         <i class="fa fa-code"></i>
                                     </div>
                                     <h4>Web Developer</h4>
-                                    <p>  asdasd asdasd asdasd asdasd asdasds
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing.
                                     </p>
                                 </div>
                             </div>
@@ -322,7 +301,7 @@
                                     <i class="fa fa-search"></i>
                                 </div>
                                 <h4>Web Developer</h4>
-                                <p> asdasd asdasd asdasd asdasd asdasd asdads
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing.
                                 </p>
                             </div>
                         </div>
@@ -334,7 +313,7 @@
                                         <i class="fa fa-bullhorn"></i>
                                     </div>
                                     <h4>Web Developer</h4>
-                                    <p>asdasd asdasd asdasd asdasd asdasd asdasd 
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing.
                                     </p>
                                 </div>
                             </div>
@@ -353,7 +332,7 @@
                     </div>
                     <div class="row">
                         <div class="portfolio-heading padd-15">
-                            <h2>My Last Projects :</h2>
+                            <h2>My Lastest Projects: </h2>
                         </div>
                     </div>
                     <div class="row">
@@ -423,8 +402,8 @@
                             <h2>Contact Me</h2>
                         </div>
                     </div>
-                    <h3 class="contact-title padd-15">Have You Any Questions ?</h3>
-                    <h4 class="contact-sub-title padd-15">I’M  AT  YOUR  SERVICES</h4>
+                    <h3 class="contact-title padd-15">Do you have any questions?</h3>
+                    <h4 class="contact-sub-title padd-15">You may contact me here.</h4>
                     <div class="row">
                         <!-- ====== contact info item start ====== -->
                         <div class="contact-info-item padd-15">
@@ -479,8 +458,8 @@
                         </div>
                         <!-- ====== contact info item end ====== -->
                     </div>
-                    <h3 class="contact-title padd-15"> Send Me An Email </h3>
-                    <h4 class="contact-sub-title padd-15">I’M VERY RESPOSIVE TO MESSAGES</h4>
+                    <h3 class="contact-title padd-15">Send Your Message Here</h3>
+                    <h4 class="contact-sub-title padd-15">I will respond promptly.</h4>
                     <!-- ==== contact form ==== -->
                     <div class="row">
                         <div class="contact-form padd-15">
@@ -512,7 +491,7 @@
                             </div>
                             <div class="row">
                                 <div class="form-item col-12 padd-15">
-                                    <button type="submit" class="btn">Send Message</button>
+                                    <button type="submit" class="btn">Submit Form</button>
                                 </div>
                             </div>
                         </div>
