--- a/index.html
+++ b/index.html
@@ -108,43 +108,43 @@
                                         <div class="skill-item padd-15">
                                             <h5>Java</h5>
                                             <div class="progress">
-                                                <div class="progress-in" style="width: 70%"></div>
-                                                <div class="skill-percent">Good</div>
+                                                <div class="progress-in" ></div>
+<!--                                                 <!--div class="skill-percent">Good</div> -->
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
                                             <h5>CSS</h5>
                                             <div class="progress">
-                                                <div class="progress-in" style="width: 50%"></div>
-                                                <div class="skill-percent">Good</div>
+                                                <div class="progress-in" ></div>
+<!--                                                 <div class="skill-percent">Good</div> -->
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
                                             <h5>JavaScript</h5>
                                             <div class="progress">
-                                                <div class="progress-in" style="width: 70%"></div>
-                                                <div class="skill-percent">Good</div>
+                                                <div class="progress-in" ></div>
+<!--                                                 <div class="skill-percent">Good</div> -->
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
                                             <h5>C++</h5>
                                             <div class="progress">
-                                                <div class="progress-in" style="width: 80%"></div>
-                                                <div class="skill-percent">Good</div>
+                                                <div class="progress-in" ></div>
+<!--                                                 <div class="skill-percent">Good</div> -->
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
                                             <h5>PYTHON</h5>
                                             <div class="progress">
-                                                <div class="progress-in" style="width: 70%"></div>
-                                                <div class="skill-percent">Good</div>
+                                                <div class="progress-in" ></div>
+<!--                                                 <div class="skill-percent">Good</div> -->
                                             </div>
                                         </div>
                                         <div class="skill-item padd-15">
                                             <h5>HTML</h5>
                                             <div class="progress">
-                                                <div class="progress-in" style="width: 70%"></div>
-                                                <div class="skill-percent">Good</div>
+                                                <div class="progress-in" ></div>
+<!--                                                 <div class="skill-percent">Good</div> -->
                                             </div>
                                         </div>
                                     </div>
