--- a/index.html
+++ b/index.html
@@ -48,7 +48,13 @@
                             <h3 class="hello">Hello, I am&nbsp;<span class="name">Ahmed Tarek Radwan </span> </h3>
                             <h3 class="my-profession">A&nbsp;<span class="typing">Web Developer</span></h3>
                             I’m a <strong>Web Developer</strong> passionate in programming.</p>
-                            <a href="#" class="btn">Download CV</a>
+                            <a href="#" class="ahm">  
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                DOWNLOAD
+                        </a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="Images/pdd.jpg" alt="">
@@ -482,7 +488,12 @@
                             </div>
                             <div class="row">
                                 <div class="form-item col-12 padd-15">
-                                    <button type="submit" class="btn">Submit Form</button>
+                                      <a href="#" class="ahm">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        SUBMENT
                                 </div>
                             </div>
                         </div>
